fixed overlapping more button

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 
 .more-btn {
-  margin: ;
+  margin: 2%;
 }
 
 .img-section {
